--- a/src/contractor-view/bids.html
+++ b/src/contractor-view/bids.html
@@ -14,7 +14,7 @@
 <body>
   <div class="project py-4 px-2 p-lg-6">
     <main class="page-content">
-      <div class="container">
+      <div class="container-fluid px-lg-0">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12">
             <div class="lg bg-light shadow-lg rounded-3 mx-auto position-relative">
@@ -24,16 +24,16 @@
                 </div>
 
                 <div class="col-lg-10">
-                  <div class="position-relative px-2 py-lg-6 px-lg-30">
+                  <div class="position-relative px-2 pb-2 pt-lg-6 pb-lg-30 px-lg-4 ps-xl-0 pe-xl-40">
                     @require('./../components/navbar.html')
 
-                    <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
-                      <h1 class="h1 fw-bolder">My Bids</h1>
+                    <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
+                      <h1 class="h1 fw-bolder mb-0">My Bids</h1>
                       <h6 class="fsz-18 mb-20">
                         List of Active Tenders you have bid on
                       </h6>
                       
-                      <div class="table-responsive table-x mb-30">
+                      <div class="table-responsive table-x mb-2">
                         <table class="table table-striped">
                           <thead>
                             <tr>
@@ -147,6 +147,66 @@
                             </tr>
                           </thead>
                           <tbody>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
+                            <tr>
+                              <td><div>Bricks and stuff</div></td>
+                              <td><div>Consulting</div></td>
+                              <td><div>Public</div></td>
+                              <td><div><a href="#">Open view</a></div></td>
+                              <td><div>12/11/2018 1:15</div></td>
+                              <td><div>12/11/20181:20</div></td>
+                              <td><div>Bidding Complete</div></td>
+                              <td><div><a href="#">View</a></div></td>
+                            </tr>
                             <tr>
                               <td><div>Bricks and stuff</div></td>
                               <td><div>Consulting</div></td>
