--- a/src/contractor-view/inbox-messages.html
+++ b/src/contractor-view/inbox-messages.html
@@ -14,7 +14,7 @@
 <body>
   <div class="project py-4 px-2 p-lg-6">
     <main class="page-content">
-      <div class="container">
+      <div class="container-fluid px-lg-0">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12">
             <div class="lg bg-light shadow-lg rounded-3 mx-auto position-relative">
@@ -24,11 +24,11 @@
                 </div>
 
                 <div class="col-lg-10">
-                  <div class="position-relative px-2 py-lg-6 px-lg-30">
+                  <div class="position-relative px-2 pb-2 pt-lg-6 pb-lg-30 px-lg-4 ps-xl-0 pe-xl-40">
                     @require('./../components/navbar.html')
 
-                    <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
-                      <h1 class="h1 fw-bolder">Inbox messages</h1>
+                    <div class="bg-white shadow rounded-3 pt-4 px-2 pb-36 px-lg-4">
+                      <h1 class="h1 fw-bolder mb-14">Inbox messages</h1>
                       
                       <div class="table-responsive table-x mb-30">
                         <table class="table table-striped">
